# semi-direct-VIO

./: README.md
sdvio/: CMakeLists.txt  package.xml  sdvio.kdev4
sdvio/.kdev4/: sdvio.kdev4
sdvio/config/: mynteye_config.yaml
sdvio/include/sdvio/: LiveSDVIO_Core.h  depthFilter.h  feature.h  feature_alignment.h  feature_detector.h  feature_manager.h  frame.h  frameHandler.h  global.h  imageMeasurement.h  imuMeasurement.h  initial_factor.h  initialization.h  integration_base.h  map.h  matcher.h  patch_score.h  performance_monitor.h  point.h  sparseImgAlign.h  timer.h  utility.h
sdvio/launch/: sdvio_node.launch
sdvio/src/: LiveSDVIO_Core.cpp  depthFilter.cpp  feature_alignment.cpp  feature_detector.cpp  frameHandler.cpp  global.cpp  initialization.cpp  matcher.cpp  performance_monitor.cpp  sdvio_node.cpp  sparseImgAlign.cpp
sdvio/src/data_structure/: feature.cpp  feature_manager.cpp  frame.cpp  map.cpp  point.cpp
sdvio/src/utilities/: utility.cpp
